7.9.1
 - Fix bad conversion of array of empty strings to string. (#816)
 - Move `[[likely]]` feature check back to compile time, to speed up configure.
 - Support `[[assume(...)]]`.
 - Fix `throw_null_conversion` compile error when converting enums. (#807)
 - Fix memory leak when failing to connect.
7.9.0
 - Support standard libraries without `std::basic_string<std::byte>` etc.
 - `std::basic_string<std::byte` becomes `pqxx::bytes`. (#726)
 - `std::basic_string_view<std::byte>` becomes `bytes_view`. (#726)
 - Fix assertion failure when streaming row ending in empty string. (#774)
 - CMake users can `shared_link_libraries(... libpqxx::pqxx)`. (#784)
 - Support parameterised versions of `query()` etc. (#646)
 - Put all feature tests back in config header. (#732)
 - Automate integration of feature tests into both CMake & autoconf. (#747)
 - Streaming query result implements `std::input_iterator`. (#771)
 - Fix broken `to_buf()` on `zview`. (#728)
 - Support `PQfsize()` and `PQfmod()`. (#727)
 - Implement conversion from `string_view` to string. (#728)
 - Rename `splitconfig` to `splitconfig.py`. (#763)
 - Document need for conversions more clearly, link to docs. (#757)
 - Experimental support for converting `std::span` to SQL arrays. (#769)
7.8.1
 - Regenerate build files. Should fix ARM Mac build. (#715)
 - Reinstate `<ciso646>` that MSVC can't live with or without. (#713)
7.8.0
 - Streaming large data sets now benchmarks faster than similar C/libpq code!
 - New `array` class for easier parsing of SQL arrays.
 - Deprecating `stream_from`.  Use `transaction_base::stream()`.
 - Use `array_parser` only on comma-separated types, i.e. most of them. (#590)
 - Bumping requirements versions: need postgres 10.
 - Fix `array_parser` bug when parsing semicolon in an unquoted string.
 - Make some `zview` constructors `noexcept` if `string_view` does it.
 - Handle result status code for starting streaming replication.  (#631)